Fixed scripts to work (#21)
* Fixed checkstyle to work

* Fixed error prone to work

* Fixed error prone to work

* Fixed error prone and added workflow to run tests

* Improved CI

* Improved CI

* Improved CI

* Improved CI

* Improved CI

* Improved CI

---------

Co-authored-by: Maxim <maximg@remitly.com>